Finishing BottomNavigationView Layout in Main UI

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,10 @@
         android:id="@+id/bottom_navigation_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:theme="@style/Widget.BottomNavigationView"
+        app:itemBackground="@android:color/transparent"
+        app:itemIconTint="@drawable/selector_navigation_menu_color"
+        app:itemTextColor="@drawable/selector_navigation_menu_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
