--- a/app/src/main/res/values/types.xml
+++ b/app/src/main/res/values/types.xml
@@ -7,4 +7,11 @@
         <item name="backgroundTint">@android:color/transparent</item>
     </style>
 
+    <style name="ExploreSearchView" parent="Widget.AppCompat.Light.SearchView">
+        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+        <item name="commitIcon">@null</item>
+        <item name="goIcon">@null</item>
+        <item name="searchHintIcon">@null</item>
+    </style>
+
 </resources>
