--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation_graph"
+    android:label="User Detai"
     app:startDestination="@id/homeFragment">
 
     <fragment
@@ -20,4 +21,15 @@
         android:name="id.rllyhz.dicodingsubmissionbfaa.ui.feature.profile.ProfileFragment"
         android:label="Profile"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/userDetailFragment"
+        android:name="id.rllyhz.dicodingsubmissionbfaa.ui.feature.userdetail.UserDetailFragment"
+        android:label="User Detail">
+        <argument
+            android:name="user"
+            app:argType="id.rllyhz.dicodingsubmissionbfaa.data.model.User" />
+    </fragment>
+    <action
+        android:id="@+id/action_global_userDetailFragment"
+        app:destination="@id/userDetailFragment" />
 </navigation>
