--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -9,16 +9,16 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="id.rllyhz.dicodingsubmissionbfaa.ui.feature.home.HomeFragment"
-        android:label="Home"
+        android:label="@string/action_bar_title_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/exploreFragment"
         android:name="id.rllyhz.dicodingsubmissionbfaa.ui.feature.explore.ExploreFragment"
-        android:label="Explore"
+        android:label="@string/action_bar_title_explore"
         tools:layout="@layout/fragment_explore" />
     <fragment
         android:id="@+id/profileFragment"
         android:name="id.rllyhz.dicodingsubmissionbfaa.ui.feature.profile.ProfileFragment"
-        android:label="Profile"
+        android:label="@string/action_bar_title_profile"
         tools:layout="@layout/fragment_profile" />
 </navigation>
