Updating Alarm UI

--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -16,6 +16,7 @@
         app:srcCompat="@drawable/ic_date" />
 
     <TextView
+        android:id="@+id/tv_alarm_date"
         style="@style/MyTextRegular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,9 +33,10 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="@id/ic_alarm_date"
         app:layout_constraintTop_toBottomOf="@id/ic_alarm_date"
-        app:srcCompat="@drawable/ic_date" />
+        app:srcCompat="@drawable/ic_time" />
 
     <TextView
+        android:id="@+id/tv_alarm_time"
         style="@style/MyTextRegular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
