--- a/app/src/main/res/menu/action_bar_menu.xml
+++ b/app/src/main/res/menu/action_bar_menu.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_menu_alarm"
-        android:icon="@drawable/ic_alarm"
-        android:title="@string/toolbar_menu_item_alarm_label" />
+        android:id="@+id/action_menu_settings"
+        android:icon="@drawable/ic_settings_filled"
+        android:title="@string/toolbar_menu_item_settings_label" />
 
     <item
         android:id="@+id/action_menu_user_fav"
-        android:title="@string/toolbar_menu_item_user_fav_label" />
+        android:icon="@drawable/ic_fav"
+        android:title="@string/toolbar_menu_item_user_fav_label"
+        app:showAsAction="always" />
     />
 </menu>
