--- a/app/src/main/res/layout/activity_user_fav.xml
+++ b/app/src/main/res/layout/activity_user_fav.xml
@@ -1,10 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/swipe_refresh_user_fav"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.userfav.UserFavActivity">
+
+    <RelativeLayout
+        android:id="@+id/rl_user_fav_empty_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:contentDescription="@string/user_fav_empty_illustration_content_desc"
+            android:id="@+id/iv_user_fav_empty_illustration"
+            android:layout_width="240dp"
+            android:layout_height="240dp"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:id="@+id/tv_user_fav_empty_message"
+            style="@style/MyTextMedium.ErrorDescriptionText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/iv_user_fav_empty_illustration"
+            android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="32dp"
+            android:layout_marginTop="24dp"
+            android:gravity="center"
+            android:text="@string/user_fav_no_user_favs_message"
+            android:textColor="@color/grey_lighter" />
+
+    </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_user_fav"
@@ -12,6 +43,7 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:paddingTop="16dp"
+        android:visibility="gone"
         tools:listitem="@layout/item_user" />
 
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
