--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
 
     <dimen name="user_detail_avatar_size">82dp</dimen>
     <dimen name="user_detail_icon_size">18dp</dimen>
+    <dimen name="user_detail_user_fav_icon_size">28dp</dimen>
     <dimen name="user_detail_distance_views">16dp</dimen>
     <dimen name="user_detail_view_pager_height">380dp</dimen>
 
