--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -57,8 +57,10 @@
                 android:focusableInTouchMode="false"
                 android:textOff=""
                 android:textOn=""
+                android:visibility="gone"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_user_detail_username" />
+                app:layout_constraintTop_toBottomOf="@id/tv_user_detail_username"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/tv_user_detail_bio_label"
