--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -19,6 +19,7 @@
 
     <TextView
         android:id="@+id/tv_settings_language_display"
+        style="@style/MyTextRegular"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:drawablePadding="8dp"
