--- a/githubconsumerapp/src/main/res/values-night/themes.xml
+++ b/githubconsumerapp/src/main/res/values-night/themes.xml
@@ -1,16 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.DicodingSubmissionBFAA" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/blue_500</item>
+        <item name="colorPrimaryVariant">@color/blue_700</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondary">@color/redish_200</item>
+        <item name="colorSecondaryVariant">@color/redish_700</item>
         <item name="colorOnSecondary">@color/black</item>
+
+        <item name="android:colorBackground">@color/background_color_dark</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!-- Customize your theme here. -->
+
+        <!-- For changing up the font of the default actionbar -->
+        <item name="android:fontFamily">@font/poppins_medium</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
