--- a/githubconsumerapp/src/main/res/values/types_typography.xml
+++ b/githubconsumerapp/src/main/res/values/types_typography.xml
@@ -5,9 +5,23 @@
         <item name="android:fontFamily">@font/poppins_medium</item>
     </style>
 
+    <style name="MyTextBold" parent="TextAppearance.AppCompat.Large">
+        <item name="android:fontFamily">@font/poppins_bold</item>
+    </style>
+
     <style name="MyTextMedium.ItemUserUsername">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="MyTextBold.ErrorText">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="MyTextMedium.ErrorDescriptionText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
