--- a/githubconsumerapp/src/main/res/layout/activity_main.xml
+++ b/githubconsumerapp/src/main/res/layout/activity_main.xml
@@ -1,48 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipe_github_consumer_app"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
 
-    <RelativeLayout
-        android:id="@+id/rl_github_consumer_app_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iv_user_fav_empty_illustration"
-            android:layout_width="240dp"
-            android:layout_height="240dp"
-            android:layout_centerHorizontal="true"
-            android:contentDescription="@string/user_fav_empty_illustration_content_desc" />
-
-        <TextView
-            android:id="@+id/tv_user_fav_empty_message"
-            style="@style/MyTextMedium.ErrorDescriptionText"
+        <RelativeLayout
+            android:id="@+id/rl_github_consumer_app_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/iv_user_fav_empty_illustration"
-            android:layout_centerHorizontal="true"
-            android:layout_marginHorizontal="32dp"
-            android:layout_marginTop="24dp"
-            android:gravity="center"
-            android:text="@string/user_fav_no_user_favs_message"
-            android:textColor="@color/grey_lighter" />
-    </RelativeLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_github_consumer_app"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingTop="8dp"
-        android:visibility="gone"
-        tools:listitem="@layout/item_user_fav" />
+            <ImageView
+                android:id="@+id/iv_user_fav_empty_illustration"
+                android:layout_width="240dp"
+                android:layout_height="240dp"
+                android:layout_centerHorizontal="true"
+                android:contentDescription="@string/user_fav_empty_illustration_content_desc" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tv_user_fav_empty_message"
+                style="@style/MyTextMedium.ErrorDescriptionText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/iv_user_fav_empty_illustration"
+                android:layout_centerHorizontal="true"
+                android:layout_marginHorizontal="32dp"
+                android:layout_marginTop="24dp"
+                android:gravity="center"
+                android:text="@string/user_fav_no_user_favs_message"
+                android:textColor="@color/grey_lighter" />
+        </RelativeLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_github_consumer_app"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingTop="8dp"
+            android:visibility="gone"
+            tools:listitem="@layout/item_user_fav" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
